FullQa New/src/objects/UAT_Results__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Score__c</fullName>
        <formula>((UAT_Quality_Score__c +  UAT_Score__c) / 2)* 0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UAT_Comments__c</fullName>
        <label>UAT Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UAT_Quality_Score__c</fullName>
        <label>UAT Quality Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Score__c</fullName>
        <label>UAT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Topics__c</fullName>
        <label>UAT Topic</label>
        <referenceTo>UAT_Topics__c</referenceTo>
        <relationshipLabel>UAT Results</relationshipLabel>
        <relationshipName>UAT_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UAT Results</label>
    <nameField>
        <label>UAT Results ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UAT Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>